fix css padding bottom on mobile, and hides download link for mobile

--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -24,4 +24,8 @@
   #main-container {
     width: 90%;
   }
+
+  #footer {
+    padding-bottom: 15%;
+  }
 }
