--- a/src/routes/Resume.css
+++ b/src/routes/Resume.css
@@ -50,7 +50,7 @@ h4 {
 }
 
 @media screen and (min-width: 0px) and (max-width: 1024px) {
-  #download-link {
+  #download-resume {
     display: none;
   }
 
